--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "private":  true,
     "scripts":  {
                     "dev":  "next dev -p 3001",
-                    "build":  "next build --turbopack",
+                    "build":  "prisma generate && next build --turbopack",
                     "start":  "next start -p 3001",
-                    "lint":  "eslint"
+                    "lint":  "eslint",
+                    "postinstall":  "prisma generate"
                 },
     "dependencies":  {
                          "@prisma/client":  "^6.17.0",
