--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
                     "build":  "prisma generate && next build --turbopack",
                     "start":  "next start -p 3001",
                     "lint":  "eslint",
-                    "postinstall":  "prisma generate"
+                    "postinstall":  "prisma generate",
+                    "db:push":  "prisma db push",
+                    "db:migrate":  "prisma migrate deploy",
+                    "db:setup-prod":  "node scripts/setup-production-db.js"
                 },
     "dependencies":  {
                          "@prisma/client":  "^6.17.0",
