--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private":  true,
     "scripts":  {
                     "dev":  "next dev -p 3001",
-                    "build":  "prisma generate && next build --turbopack",
-                    "start":  "next start -p 3001",
+                    "build":  "prisma generate && next build",
+                    "start":  "next start -p $PORT",
                     "lint":  "eslint",
                     "postinstall":  "prisma generate",
                     "db:push":  "prisma db push",
