--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private":  true,
     "scripts":  {
                     "dev":  "next dev -p 3001",
-                    "build":  "prisma generate && next build",
+                    "build":  "next build",
+                    "build:docker":  "next build",
                     "start":  "next start -p $PORT",
                     "lint":  "eslint",
                     "postinstall":  "prisma generate",
