--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
-{
+﻿{
     "name":  "toastyleague",
     "version":  "0.1.1",
     "private":  true,
     "scripts":  {
                     "dev":  "next dev -p 3001",
                     "build":  "next build",
-                    "start":  "next start -p $PORT",
+                    "start":  "prisma migrate deploy || prisma db push \u0026\u0026 next start -p ",
                     "migrate:deploy":  "prisma migrate deploy || prisma db push",
                     "lint":  "eslint",
                     "postinstall":  "prisma generate",
