--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts":  {
                     "dev":  "next dev -p 3001",
                     "build":  "next build",
-                    "start":  "prisma migrate deploy || prisma db push \u0026\u0026 next start -p ",
+                    "start":  "next start -p $PORT",
                     "migrate:deploy":  "prisma migrate deploy || prisma db push",
                     "lint":  "eslint",
                     "postinstall":  "prisma generate",
