--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts":  {
                     "dev":  "next dev -p 3001",
                     "build":  "next build",
-                    "start":  "sh -c \"npx prisma migrate deploy || npx prisma db push; npx prisma generate; next start -p $PORT\"",
+                    "start":  "next start -p ",
                     "migrate:deploy":  "prisma migrate deploy",
                     "lint":  "eslint",
                     "postinstall":  "prisma generate",
